--- a/TourPlanner.UI/Theme/ActionButtonTheme.xaml
+++ b/TourPlanner.UI/Theme/ActionButtonTheme.xaml
@@ -1,13 +1,22 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="ActionButtonStyle"
+    <Style x:Key="BaseButtonStyle"
            TargetType="Button">
+        <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
         <Setter Property="Foreground" Value="#F5ECD5"/>
         <Setter Property="Background" Value="#f28484"/>
-        <Setter Property="FontSize" Value="16"/>
-        <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
-        <Setter Property="FontWeight" Value="Light"/>
         <Setter Property="Cursor" Value="Hand"/>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#ed5656"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    <Style x:Key="ActionButtonStyle"
+           BasedOn="{StaticResource BaseButtonStyle}"
+           TargetType="Button">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontWeight" Value="Light"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Margin" Value="4"/>
         <Setter Property="Template">
@@ -27,6 +36,57 @@
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="#ed5656"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    <Style x:Key="SubmitButtonStyle"
+           BasedOn="{StaticResource BaseButtonStyle}"
+           TargetType="Button">
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="Padding" Value="20,10"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Height="60"
+                            CornerRadius="25"
+                            BorderThickness="0"
+                            Background="{TemplateBinding Background}"
+                            Padding="{TemplateBinding Padding}">
+                        <ContentPresenter VerticalAlignment="Center"
+                                          HorizontalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style x:Key="CancelButtonStyle"
+           BasedOn="{StaticResource BaseButtonStyle}"
+           TargetType="Button">
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="Foreground" Value="#f28484"/>
+        <Setter Property="Padding" Value="20,10"/>
+        <Setter Property="Background" Value="#F5ECD5"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Height="60"
+                            CornerRadius="25"
+                            BorderThickness="2"
+                            BorderBrush="#f28484"
+                            Background="{TemplateBinding Background}"
+                            Padding="{TemplateBinding Padding}">
+                        <ContentPresenter VerticalAlignment="Center"
+                                          HorizontalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#ed5656"/>
+                <Setter Property="Foreground" Value="#F5ECD5"/>
             </Trigger>
         </Style.Triggers>
     </Style>
