--- a/TourPlanner.UI/Theme/TextBlockTheme.xaml
+++ b/TourPlanner.UI/Theme/TextBlockTheme.xaml
@@ -1,22 +1,42 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="TextBlockStyle"
+    <Style x:Key="BaseTextBlockStyle"
            TargetType="TextBlock">
         <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="Foreground" Value="#F5ECD5"/>
-        <Setter Property="Margin" Value="5"/>
-        <Setter Property="Padding" Value="10"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="HorizontalAlignment" Value="Stretch"/>
-        <Setter Property="TextWrapping" Value="Wrap"/>
-        <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
         <Setter Property="MaxWidth" Value="200"/>
     </Style>
+    
+    <Style x:Key="DetailsTextBlockStyle"
+           BasedOn="{StaticResource BaseTextBlockStyle}"
+           TargetType="TextBlock">
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Padding" Value="10"/>
+        <Setter Property="TextWrapping" Value="Wrap"/>
+        <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
+        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+    </Style>
+    
     <Style x:Key="TextBlockDescriptorStyle"
-           BasedOn="{StaticResource TextBlockStyle}"
+           BasedOn="{StaticResource BaseTextBlockStyle}"
            TargetType="TextBlock">
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="Foreground" Value="#f7b2b2"/>
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Padding" Value="10"/>
+        <Setter Property="HorizontalAlignment" Value="Stretch"/>
     </Style>
+    
+    <Style x:Key="FormTextBlockDescriptorStyle"
+           BasedOn="{StaticResource BaseTextBlockStyle}"
+           TargetType="TextBlock">
+        <Setter Property="FontWeight" Value="Medium"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Foreground" Value="#f7b2b2"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Padding" Value="10"/>
+    </Style>
+    
 </ResourceDictionary>
