--- a/TourPlanner.UI/Views/CreateTourLog.xaml
+++ b/TourPlanner.UI/Views/CreateTourLog.xaml
@@ -7,14 +7,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="400">
 
-    <Border BorderBrush="#F0BB78"
-            Background="#F5ECD5"
-            BorderThickness="3"
-            CornerRadius="12"
-            Margin="15">
+    <Border CornerRadius="12">
 
         <ScrollViewer VerticalScrollBarVisibility="Auto">
-            <Grid Margin="0,0,0,20">
+            <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -25,16 +21,17 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <Border Background="#A4B465"
-                        CornerRadius="10,10,0,0">
+                <Border Background="#f28484"
+                        Padding="10">
 
                     <TextBlock Text="Create Tour Log"
-                               Foreground="Black"
-                               VerticalAlignment="Center"
+                               Foreground="#F5ECD5"
                                FontSize="22"
                                FontFamily="/Resources/Fonts/#Montserrat"
                                FontWeight="Bold"
-                               Padding="15"/>
+                               HorizontalAlignment="Left"
+                               VerticalAlignment="Center"
+                               Margin="50,5"/>
                 </Border>
 
                 <!-- Date -->
@@ -68,7 +65,7 @@
                                Padding="5"/>
                     <TextBox
                              Text="{Binding Comment, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                             Style="{StaticResource FormFieldStyle}"
+                             Style="{StaticResource FormFieldTextBox}"
                              TextWrapping="Wrap"
                              AcceptsReturn="True"
                              Padding="5"
@@ -161,7 +158,7 @@
                                    VerticalAlignment="Center"/>
                         <StackPanel Orientation="Horizontal">
                             <TextBox Text="{Binding TotalDistance, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                                     Style="{StaticResource FormFieldStyle}"
+                                     Style="{StaticResource FormFieldTextBox}"
                                      VerticalAlignment="Center"
                                      Width="100"
                                      HorizontalAlignment="Left"/>
@@ -192,7 +189,7 @@
                                    VerticalAlignment="Center"/>
                         <StackPanel Orientation="Horizontal">
                             <TextBox Text="{Binding Hours, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                                     Style="{StaticResource FormFieldStyle}"
+                                     Style="{StaticResource FormFieldTextBox}"
                                      VerticalAlignment="Center"
                                      Width="50"
                                      HorizontalAlignment="Left"/>
@@ -206,7 +203,7 @@
                                 Padding="5"
                                 Margin="2,0,10,0"/>
                             <TextBox Text="{Binding Minutes, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                                     Style="{StaticResource FormFieldStyle}"
+                                     Style="{StaticResource FormFieldTextBox}"
                                      Width="50"
                                      VerticalAlignment="Center"
                                      HorizontalAlignment="Left"/>
