--- a/TourPlanner.UI/Views/Map.xaml
+++ b/TourPlanner.UI/Views/Map.xaml
@@ -5,12 +5,18 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:wpf="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
              xmlns:local="clr-namespace:TourPlanner.UI.Views"
+             xmlns:converters="clr-namespace:TourPlanner.UI.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     
+    <UserControl.Resources>
+        <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+    </UserControl.Resources>
+
     <Border CornerRadius="0,0,12,0">
         <Grid>
-            <wpf:WebView2 x:Name="webView"/>
+            <wpf:WebView2 x:Name="webView"
+                         Visibility="{Binding IsMapVisible, Converter={StaticResource BoolToVisibilityConverter}}"/>
         </Grid>
 
     </Border>
